// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormulaPreview component: should render the error message 1`] = `
<DocumentFragment>
  <div
    class="formula-preview"
  >
    <label
      class="label"
      data-testid="label-test-id"
    >
      <span
        class="label__text"
      >
        Preview
      </span>
    </label>
    <p
      class="formula-preview__error"
    >
      The entered expression cannot be converted into a propositional formula.
    </p>
  </div>
</DocumentFragment>
`;

exports[`FormulaPreview component: should render the formula preview 1`] = `
<DocumentFragment>
  <div
    class="formula-preview"
  >
    <label
      class="label"
      data-testid="label-test-id"
    >
      <span
        class="label__text"
      >
        Preview
      </span>
    </label>
    <pre
      class="formula formula-preview__formula"
      role="math"
    >
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <span
        class="formula__operator"
      >
        ¬
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <var
        class="formula__variable"
      >
        P
      </var>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__operator"
      >
         ⇒ 
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <var
        class="formula__variable"
      >
        P
      </var>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__operator"
      >
         ∧ 
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <var
        class="formula__variable"
      >
        Q
      </var>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__operator"
      >
         ⇒ 
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <span
        class="formula__operator"
      >
        ¬
      </span>
      <span
        class="formula__parentheses"
      >
        (
      </span>
      <var
        class="formula__variable"
      >
        P
      </var>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__parentheses"
      >
        )
      </span>
      <span
        class="formula__parentheses"
      >
        )
      </span>
    </pre>
  </div>
</DocumentFragment>
`;
